# comms_manager

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  example_pub.cpp  example_sub.cpp
example/msg/: example_data.h  example_msg.h
include/: CommsManager.hpp  SharedMemory.hpp
include/logger/: CommsLogger.hpp
include/player/: CommsPlayer.hpp
src/: CommsManager.cpp
src/logger/: CommsLogger.cpp  main.cpp
src/player/: CommsPlayer.cpp  main.cpp
